nginxdeployment_Rolling_update.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxwebapp-deployment
  labels:
    name: nginxwebapp
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  minReadySeconds: 60
  selector:
    matchLabels:
      app: nginxwebapp
  template:
    metadata:
      name: nginxwebapp-pod
      labels:
        app: nginxwebapp
    spec:
      containers:
      - name: nginxwebappcontainer
        image: tendulkar999/nginx-image
        ports:
        - name: ports
          containerPort: 80
        resources: 
          requests:
            cpu: 100m
            memory: 64Mi
          limits: 
            cpu: 100m 
            memory: 256Mi
